test/types/records/ferguson/default-compare-mixed-insn.3.good
default-compare-mixed-insn.chpl:8: In function 'main':
default-compare-mixed-insn.chpl:19: error: type mismatch in assignment from R(int(32)) to R(int(64))
